Product related components added... Demonstration for nested components, component communication... Life cycle hooks and Content projection

--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="panel panel-primary">
     <div class="panel-heading">
-        Welcome!!! Developed by: Sumanth Sampath
+        {{pageTitle}}!!! Developed by: Sumanth Sampath
     </div>
     <div class="panel-body">
        
