--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,71 +1,76 @@
 <div class='panel panel-primary'>
-  <div class='panel-heading'>
-      {{pageTitle}} <br>
-      Product Description: {{prodDescFromChild}}
+    <div class='panel-heading'>
+        {{pageTitle}} <br>
+        Product Description: {{prodDescFromChild}}
+    </div>
+    <div class='panel-body'>
+        <div class='row'>
+            <div class='col-md-2'>Filter by:</div>
+            <div class='col-md-4'>
+                <!-- <input type='text' [(ngModel)]='listFilter' /> -->
+                <input type='text'  />
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-6'>
+                <!-- h3<>Filtered by: {{listFilter}} </h3> -->
+            </div>
+        </div>
+        <div class='table-responsive'>
+            <table class='table'
+                    *ngIf='products && products.length'>
+                <thead>
+                    <tr>
+                        <th>
+                            <button class='btn btn-primary'
+                                (click)='toggleImage()'>
+                                {{showImage ? 'Hide' : 'Show'}} Image
+                            </button>
+                        </th>
+                        <th>Product</th>
+                        <th>Code</th>
+                        <th>Available</th>
+                        <th>Price</th>
+                        <th>5 Star Rating</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor='let product of products'>
+                        <td>
+                            <img *ngIf='showImage'
+                                [src]='product.imageUrl'
+                                [title]='product.productName'
+                                [style.width.px]='imageWidth'
+                                [style.margin.px]='imageMargin'>
+                        </td>
+                       <!-- <td><a [routerLink]="['/products', product.productId]">
+                                {{ product.productName }}
+                            </a>
+                      </td> -->
+                        <td (click) = 'loadDetail(product)'>
+                            {{ product.productName }}        
+                        </td>
+                        <td adHighlight 
+                            [defaultColor]="'yellow'" 
+                            (click)='invokeChild(product.productCode)'>{{ product.productCode | lowercase | convertToSpaces: '-'}}</td>
+                        <td>{{ product.releaseDate }}</td>
+                        <td adHighlight 
+                            [highlightColor] ="'red'" 
+                            [defaultColor]="'yellow'" >
+                            {{ product.price | currency:'USD':'symbol':'1.2-2'}}</td>
+                        <td>
+                            <!-- <pm-star [rating]='product.starRating'
+                                (ratingClicked)='onRatingClicked($event)'> 
+                            </pm-star>-->
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
   </div>
-  <div class='panel-body'>
-      <div class='row'>
-          <div class='col-md-2'>Filter by:</div>
-          <div class='col-md-4'>
-              <!-- <input type='text' [(ngModel)]='listFilter' /> -->
-              <input type='text'  />
-          </div>
-      </div>
-      <div class='row'>
-          <div class='col-md-6'>
-              <!-- h3<>Filtered by: {{listFilter}} </h3> -->
-          </div>
-      </div>
-      <div class='table-responsive'>
-          <table class='table'
-                  *ngIf='products && products.length'>
-              <thead>
-                  <tr>
-                      <th>
-                          <button class='btn btn-primary'
-                              (click)='toggleImage()'>
-                              {{showImage ? 'Hide' : 'Show'}} Image
-                          </button>
-                      </th>
-                      <th>Product</th>
-                      <th>Code</th>
-                      <th>Available</th>
-                      <th>Price</th>
-                      <th>5 Star Rating</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr *ngFor='let product of products'>
-                      <td>
-                          <img *ngIf='showImage'
-                              [src]='product.imageUrl'
-                              [title]='product.productName'
-                              [style.width.px]='imageWidth'
-                              [style.margin.px]='imageMargin'>
-                      </td>
-                     <!-- <td><a [routerLink]="['/products', product.productId]">
-                              {{ product.productName }}
-                          </a>
-                    </td> -->
-                      <td (click) = 'loadDetail(product)'>
-                          {{ product.productName }}        
-                      </td>
-                      <!-- <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td> -->
-                      <td (click)='invokeChild(product.productCode)'>{{ product.productCode}}</td>
-                      <td>{{ product.releaseDate }}</td>
-                      <td>{{ product.price | currency:'USD':true:'1.2-2'}}</td>
-                      <td>
-                          <!-- <pm-star [rating]='product.starRating'
-                              (ratingClicked)='onRatingClicked($event)'> 
-                          </pm-star>-->
-                      </td>
-                  </tr>
-              </tbody>
-          </table>
-      </div>
+  <div *ngIf='errorMessage' class='alert alert-danger'>
+    Error: {{ errorMessage }}
   </div>
-</div>
-<div *ngIf='errorMessage' class='alert alert-danger'>
-  Error: {{ errorMessage }}
-</div>
-<ad-product-detail [product]= "selectedProduct" (callParent)= "logProductName($event)"></ad-product-detail>
+  <ad-product-detail [product]= "selectedProduct" (callParent)= "logProductName($event)"></ad-product-detail>
+  
