--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -30,6 +30,7 @@
               <div class='row'>
                   <div class='col-md-3'>5 Star Rating:</div>
                   <div class='col-md-6'>
+                      {{product.starRating}}
                       <!-- <pm-star [rating]='product.starRating'>
                       </pm-star> -->
                   </div>
