--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -13,7 +13,6 @@
 
                 <div class="col-md-8">
                     <input class="form-control" 
-                            id="productNameId" 
                             type="text" 
                             placeholder="Name (required)"
                             required
@@ -42,7 +41,6 @@
 
                 <div class="col-md-8">
                     <input class="form-control" 
-                            id="productCodeId" 
                             type="text" 
                             placeholder="Code (required)"
                             required
@@ -84,7 +82,7 @@
                             <button class="btn btn-primary"
                                     type="button"
                                     style="width:80px;margin-right:10px"
-                                    [disabled]="productForm.invalid"
+                                    [disabled]="false"
                                     (click)="saveProduct(productForm)">
                                 Save
                             </button>
