Routing and Navigation implemented

--- a/src/app/products/product-accordion/product-accordion.component.html
+++ b/src/app/products/product-accordion/product-accordion.component.html
@@ -4,7 +4,7 @@
       {{product.description}}
     </div>
     <div acc-body>
-      <ad-product-detail [product]="product"></ad-product-detail>
+      <!-- <ad-product-detail [product]="product"></ad-product-detail> -->
     </div>
   </ad-accordion>
   <br>
