--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,103 +1,16 @@
-<div class="panel-body" *ngIf='product'>
-    <form class="form-horizontal"
-          novalidate
-          #productForm="ngForm">
-        <fieldset>
-            <legend>Basic Product Information</legend>
-            <div class="form-group" 
-                    [ngClass]="{'has-error': (productNameVar.touched || 
-                                              productNameVar.dirty || product.productId !== 0) && 
-                                              !productNameVar.valid }">
-                <label class="col-md-2 control-label" 
-                        for="productNameId">Product Name</label>
+<h3>The following links are provided from the Parent Edit component</h3>
+<div class="panel-body">
+    <div class="panel-body">
+        <div class="wizard">
+            <a [routerLink]="['info']" routerLinkActive="active">
+                Basic Information
+            </a>
+            <a [routerLink]="['tags']" routerLinkActive="active">
+                Search Tags
+            </a>
+        </div>
 
-                <div class="col-md-8">
-                    <input class="form-control" 
-                            type="text" 
-                            placeholder="Name (required)"
-                            required
-                            minlength="3"
-                            [(ngModel)] = "product.productName"
-                            name="productName"
-                            #productNameVar="ngModel" />
-                    <span class="help-block" *ngIf="(productNameVar.touched ||
-                                                     productNameVar.dirty || product.productId !== 0) &&
-                                                     productNameVar.errors">
-                        <span *ngIf="productForm.getControl(productNameVar).hasError('required')">
-                            Product name is required.
-                        </span>
-                        <span *ngIf="productForm.getControl(productNameVar).hasError('minlength')">
-                            Product name must be at least three characters.
-                        </span>
-                    </span>
-                </div>
-            </div>
-            
-            <div class="form-group" 
-                    [ngClass]="{'has-error': (productCodeVar.touched || 
-                                              productCodeVar.dirty || product.productId !== 0) && 
-                                              !productCodeVar.valid }">
-                <label class="col-md-2 control-label" for="productCodeId">Product Code</label>
+        <router-outlet></router-outlet>
+    </div>
 
-                <div class="col-md-8">
-                    <input class="form-control" 
-                            type="text" 
-                            placeholder="Code (required)"
-                            required
-                            [ngModel] = "product.productCode | lowercase | convertToSpaces: '-'"
-                            (ngModelChange) = "product.productCode = $event"
-                            name="productCode"
-                            #productCodeVar="ngModel"
-                            ad-cleanProd />
-                    <span class="help-block" *ngIf="(productForm.getControl(productCodeVar).touched ||
-                                productForm.getControl(productCodeVar).dirty || product.productId !== 0) &&
-                                productForm.getControl(productCodeVar).errors">
-                        <span *ngIf="productForm.getControl(productCodeVar).hasError('required')">
-                            Product code is required.
-                        </span>
-                        <span *ngIf="productForm.getControl(productCodeVar).hasError('cleanProd')">
-                                Product code should start with an alphabet or a number
-                        </span>
-                    </span>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="descriptionId">Description</label>
-
-                <div class="col-md-8">
-                    <textarea class="form-control" 
-                            id="descriptionId" 
-                            placeholder="Description"
-                            rows=3
-                            [(ngModel)] = product.description
-                            name="description"></textarea>
-                </div>
-            </div>
-            
-            <div class="panel-footer">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-2">
-                        <span>
-                            <button class="btn btn-primary"
-                                    type="button"
-                                    style="width:80px;margin-right:10px"
-                                    [disabled]="false"
-                                    (click)="saveProduct(productForm)">
-                                Save
-                            </button>
-                        </span>
-                        <span>
-                            <a class="btn btn-default"
-                                [routerLink]="['/products']">
-                                Cancel
-                            </a>
-                        </span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="has-error" *ngIf="errorMessage">{{errorMessage}}</div>
-        </fieldset>
-    </form>
 </div>
