--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -8,6 +8,9 @@
             <a [routerLink]="['tags']" routerLinkActive="active">
                 Search Tags
             </a>
+            <a [routerLink]="['reactInfo']" routerLinkActive="active">
+                Basic Info - Reactive
+            </a>
         </div>
 
         <router-outlet></router-outlet>
