--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,15 +1,15 @@
 <div class='panel panel-primary'>
     <div class='panel-heading'>
-        {{pageTitle + ': ' + product.productName}}<br>
-        Product code fromParent : {{codeFromParent}}
+        {{pageTitle + ': ' + product.productName}}
+        <br> Product code fromParent : {{codeFromParent}}
     </div>
-  
+
     <div class='panel-body'>
         <div class='row'>
             <div class='col-md-6'>
                 <div class='row'>
                     <div class='col-md-3'>Name:</div>
-                    <div class='col-md-6' (click) ="handleClick()">{{product.productName}}</div>
+                    <div class='col-md-6' (click)="handleClick()">{{product.productName}}</div>
                 </div>
                 <div class='row'>
                     <div class='col-md-3'>Code:</div>
@@ -36,19 +36,27 @@
                     </div>
                 </div>
             </div>
-  
+
             <div class='col-md-6'>
-                <img class='center-block img-responsive' 
-                     [style.width.px]='200' 
-                     [style.margin.px]='2' 
-                     [src]='product.imageUrl'
-                     [title]='product.productName'>
+                <img class='center-block img-responsive' [style.width.px]='200' [style.margin.px]='2' [src]='product.imageUrl' [title]='product.productName'>
             </div>
         </div>
     </div>
-   <div class='panel-footer'>
+    <div class='panel-footer'>
         <a class='btn btn-default' (click)='onBack()' style='width:80px'>
             <i class='glyphicon glyphicon-chevron-left'></i> Back
         </a>
     </div>
-  </div>
+    <div class="form-group">
+        <div class="col-md-4 col-md-offset-2">
+            <span>
+                <button class="btn btn-primary" type="button" (click)="loadDynamicComponent()">
+                    Load Dynamic Component
+                </button>
+            </span>
+        </div>
+    </div>
+</div>
+<ng-template #dynamicCompHost>
+
+</ng-template>
